My commit for project - first

--- a/Homepage.html
+++ b/Homepage.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Design.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Design.css" />
     <title>Ty's Website</title>
-   
-</head>
-<body>
-    <link rel="stylesheet" href="Design.css">
+  </head>
+  <body>
+    <link rel="stylesheet" href="Design.css" />
     <title>Ty's Website</title>
-<div><h1 class="h1"><strong>Ty Smith </strong></h1></div>
-<div>Home Page</div>
-<div class="column side"><h2 class="h2"><strong>What I like to do for fun?</strong></h2><br><p>I like to game, partake in happy hours and brunches, hike, and <strong>SLEEP!</strong></p>
-</div>
-<div class="column main"><p class ="p1">I am new to this building website thing, <strong>more to come......</strong></p><br>
-   
-<img src="Ty's pic.jpg" alt="Ty's pic" class="imgMain">
-<style>
-    .imgMain{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;    }
-</style>  
-</div>
-<div class="column side"><strong>Inspirational Quote:</strong><br>“Be yourself; everyone else is already taken.”
-    ― Oscar Wilde
-</div>    
-<div class="footer"><strong>Copyright, Ty Smith, 2022</strong></div></body></html>
+    <div>
+      <h1 class="h1"><strong>Ty Smith </strong></h1>
+    </div>
+    <div>Home Page</div>
+    <div class="column side">
+      <h2 class="h2"><strong>What I like to do for fun?</strong></h2>
+      <br />
+      <p>
+        I like to game, partake in happy hours and brunches, hike, and
+        <strong>SLEEP!</strong>
+      </p>
+    </div>
+    <div class="column main">
+      <p class="p1">
+        I am new to this building website thing,
+        <strong>more to come......</strong>
+      </p>
+      <br />
+
+      <img src="Ty's pic.jpg" alt="Ty's pic" class="imgMain" />
+      <style>
+        .imgMain {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      </style>
+    </div>
+    <div class="column side">
+      <strong>Inspirational Quote:</strong><br />“Be yourself; everyone else is
+      already taken.” ― Oscar Wilde
+    </div>
+    <div class="footer"><strong>Copyright, Ty Smith, 2022</strong></div>
+  </body>
+</html>
